--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: "Sometype Mono", monospace;
   line-height: 1.5;
   font-weight: 400;
 
